# football-analytics

./: .gitignore  README.md  pyproject.toml
notebooks/wirtz_goals_bundesliga_23_24/: get_wirtz_all_goal_events.ipynb  scrape_wirtz_match_log.ipynb
notebooks/wirtz_goals_bundesliga_23_24/data/: florian_wirtz_all_goal_events.json  florian_wirtz_all_match_logs_23_24.csv
